add statistic vidieo and re edit async request

--- a/MagicYouPlayer/Info.plist
+++ b/MagicYouPlayer/Info.plist
@@ -23,7 +23,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.963296127785-3v61n2f2u3a0sbj15d8ccst9hol0jqem</string>
+				<string>693813855180-cn90qammd4tp6rhvecluhbs4gb1mdqjj.apps.googleusercontent.com</string>
 			</array>
 		</dict>
 	</array>
