--- a/MagicYouPlayer/GoogleService-Info.plist
+++ b/MagicYouPlayer/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>963296127785-3v61n2f2u3a0sbj15d8ccst9hol0jqem.apps.googleusercontent.com</string>
+	<string>693813855180-cn90qammd4tp6rhvecluhbs4gb1mdqjj.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.963296127785-3v61n2f2u3a0sbj15d8ccst9hol0jqem</string>
+	<string>com.googleusercontent.apps.693813855180-cn90qammd4tp6rhvecluhbs4gb1mdqjj</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBmBCpwUsMTtEOS7myEH51bsNvIkDpGObg</string>
+	<string>AIzaSyAMksV6fx1Kfc7S__6obBXFlBsHqj0yv3o</string>
 	<key>GCM_SENDER_ID</key>
-	<string>963296127785</string>
+	<string>693813855180</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.alexeysorochan.MagicYouPlayer</string>
 	<key>PROJECT_ID</key>
-	<string>magicyouplayer-39514</string>
+	<string>magicyou-ec806</string>
 	<key>STORAGE_BUCKET</key>
-	<string>magicyouplayer-39514.appspot.com</string>
+	<string>magicyou-ec806.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:963296127785:ios:d360165d097e4a0bb66538</string>
+	<string>1:693813855180:ios:565db82c0c261ab6f19369</string>
 	<key>DATABASE_URL</key>
-	<string>https://magicyouplayer-39514.firebaseio.com</string>
+	<string>https://magicyou-ec806.firebaseio.com</string>
 </dict>
 </plist>
