--- a/MagicYouPlayer/Info.plist
+++ b/MagicYouPlayer/Info.plist
@@ -23,7 +23,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>693813855180-cn90qammd4tp6rhvecluhbs4gb1mdqjj.apps.googleusercontent.com</string>
+				<string>com.googleusercontent.apps.710132482627-dokvab2dhi0m142okfqvg4oppgpq3h74</string>
 			</array>
 		</dict>
 	</array>
